--- a/css/styles.css
+++ b/css/styles.css
@@ -3298,11 +3298,12 @@ article.illustrated footer .date-unit {
 }
 
 .listing-item {
-    position: relative; 
+    position: relative;
     /*** Icon placement and style.
  ***/
     margin-bottom: 60px;
     margin-bottom: 3.33333rem;
+    /* Fix gradient overflow when the item is illustrated. */
 }
 .listing-item:before {
     position: absolute;
@@ -3345,6 +3346,10 @@ article.illustrated footer .date-unit {
 }
 .listing-item.post-page:before {
     content: "";
+}
+.listing-item.post-illustrated,
+.listing-item.page {
+    overflow: hidden;
 }
 .listing-item.post-illustrated:before,
 .listing-item.page:before {
